[tool.poetry]
name = "Latimes"
version = "0.0.1"
description = "Registro horario de distintos paises de America del Sur"
authors = ["Jean Victor Rada"]
license = "Whytee Products"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
